# datacore

./: .drone.yml  Cargo.toml  README.md
authentication/: Cargo.toml
authentication/src/: api.rs  authenticator.rs  error.rs  lib.rs  relying_party.rs  security.rs
authentication/src/api/: assertion_generation_options.rs  authenticator_responses.rs  credential_creation_options.rs  credential_generation_parameters.rs  extensions_inputs_and_outputs.rs  public_key_credential.rs  supporting_data_structures.rs
authentication/src/authenticator/: assertion_signature.rs  attestation.rs  attestation_object.rs  credential_object.rs  credentials.rs  data.rs  operation.rs  public_key_credential_source.rs  session.rs  store.rs
authentication/src/authenticator/attestation/: cose_key_format.rs  statement_format.rs
authentication/src/authenticator/attestation/statement_format/: packed.rs
authentication/src/authenticator/operation/: authenticator_get_assertion.rs  authenticator_make_credential.rs
authentication/src/relaying_party/registration/: public_key_credential_creation_options.rs
authentication/src/relying_party/: client.rs  operation.rs  protocol.rs  registration.rs  session.rs  store.rs
authentication/src/relying_party/client/: ceremony_data.rs  incoming_data.rs  outgoing_data.rs  webauthn_data.rs
authentication/src/relying_party/operation/: authenticate.rs  authentication_ceremony.rs  register.rs  registration_ceremony.rs
authentication/src/relying_party/protocol/: communication.rs  websockets.rs
authentication/src/relying_party/protocol/communication/: authenticator_agent.rs  client_agent.rs  fail_ceremony.rs  relying_party_agent.rs  webauthn_data.rs
authentication/src/relying_party/protocol/websockets/: session.rs
authentication/src/relying_party/session/: active.rs  available.rs
authentication/src/relying_party/store/: credential_public_key.rs  signature_counter.rs  user_account.rs
authentication/src/security/: challenge.rs  session_token.rs  sha2.rs  uuid.rs
system/: Cargo.toml
system/src/: authorization_server.rs  client_registration.rs  endpoint.rs  lib.rs  main.rs  state.rs  token_introspection.rs
system/src/authorization_server/: authorization.rs  token.rs
system/src/authorization_server/authorization/: error.rs  request.rs  response.rs
system/src/authorization_server/token/: error.rs  request.rs  response.rs
system/src/client_registration/: register.rs
system/src/client_registration/register/: error.rs  request.rs  response.rs
system/src/endpoint/: authorization_server.rs  client_registration.rs  token_introspection.rs
system/src/endpoint/authorization_server/: authorization.rs  token.rs  userinfo.rs
system/src/endpoint/authorization_server/authorization/: request.rs  response.rs
system/src/endpoint/authorization_server/token/: response.rs
system/src/endpoint/client_registration/: register.rs
system/src/endpoint/client_registration/register/: error.rs  request.rs  response.rs
system/src/endpoint/token_introspection/: introspect.rs
system/src/endpoint/token_introspection/introspect/: request.rs  response.rs
system/src/state/: access_token_lifetime.rs  access_tokens.rs  authorization_code_lifetime.rs  authorization_codes.rs  channel.rs  client_registry.rs  clients.rs
system/src/state/access_token_lifetime/: channel.rs
system/src/state/access_tokens/: channel.rs
system/src/state/authorization_code_lifetime/: channel.rs
system/src/state/authorization_codes/: channel.rs
system/src/state/client_registry/: channel.rs
system/src/token_introspection/: introspect.rs
system/src/token_introspection/introspect/: request.rs
