[workspace]

members = [
    "authentication",
    "system",
]

[workspace.dependencies]
serde = { version = "1.0.145", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.85", default-features = false, features = [ "std" ] }
tokio = { version = "1.21.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
uuid = { version = "1.1.2", default-features = false, features = [ "std", "v4"] }
