[workspace]

members = [
    "authentication",
    "system",
]

[workspace.dependencies]
axum = { version = "0.6.8", default-features = false, features = [ "http1", "query" ] }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
serde = { version = "1.0.163", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.96", default-features = false, features = [ "std" ] }
tokio = { version = "1.28.2", default-features = false, features = [ "macros", "rt-multi-thread" ] }
uuid = { version = "1.3.3", default-features = false, features = [ "std", "v4"] }
