[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ciborium = "0.2.0"
ed25519-dalek = "1.0.1"
rand.workspace = true
rand_chacha = "0.2.2" 
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.6", default-features = false, features = [ "std" ] }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
hex-literal = "0.3.4"
tokio = { workspace = true, features = [ "test-util" ] }
