[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webauthn_relying_party"
path = "../bin/webauthn_relying_party.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
base64 = "0.13.1"
chrono = { version = "0.4.23", default-features = false, features = [ "clock" ] }
ciborium = "0.2.0"
ed25519-dalek = "1.0.1"
futures = "0.3.25"
rand.workspace = true
rand_chacha = "0.2.2" 
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.6", default-features = false, features = [ "std" ] }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
hex-literal = "0.3.4"
tokio = { workspace = true, features = [ "test-util" ] }
tokio-tungstenite = "0.18.0"
